# beer-classifier

./: .dockerignore  .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  ci-tests.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  requirements-dev.txt  requirements-sys.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
notebooks/: example.ipynb
src/beer_classifier/: __init__.py  config.yaml  main.py
src/beer_classifier/components/: data_ingestion.py
src/beer_classifier/config/: configuration.py
src/beer_classifier/constants/: __init__.py
src/beer_classifier/entities/: config.py
src/beer_classifier/pipeline/: stage01_data_ingestion.py
src/beer_classifier/utils/: common.py
src/common/: requirements.txt
tests/beer_classifier/: test_main.py
tests/cpu_project/: test_main.py
tests/pytorch_project/: test_main.py
