[project]
name = "beer-classifier"
version = "0.0.0a1"
dependencies = []
requires-python = ">=3.11"
authors = [
    {name = "Julian L.", email = "julianlatest@users.noreply.github.com"}
]
maintainers = [
    {name = "Julian L.", email = "julianlatest@users.noreply.github.com"}
]
description = "Project to demonstrate usage of my ml-dev-template."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["beer", "classifier", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
Homepage = "https://github.com/julianlatest/beer-classifier"
Documentation = "https://github.com/julianlatest/beer-classifier"
Repository = "https://github.com/julianlatest/beer-classifier.git"
Issues = "https://github.com/julianlatest/beer-classifier/issues"
Changelog = "https://github.com/julianlatest/beer-classifier"


[tool.ruff]
target-version = "py311"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
# On top of the default `select` (`E`, `F`), 
# enable 
# - flake8-bugbear (`B`)
# - flake8-bandit (S)
# - isort (I)
# - pep8-naming (N)
select = ["E", "F", "B", "S", "I", "N"]


[tool.ruff.lint.per-file-ignores]
"**/tests/**/test_*.py" = [
    "S101", # asserts allowed in tests
]
"**/*.ipynb" = [
    "B018", # allow notebooks printing out variables in the mid cell with variable names only
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--import-mode=importlib"

[tool.coverage.run]
omit = [
    # ignore all notebooks
    "*/notebooks/*",
    # ignore all tests
    "*/tests/*",
]